--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -38,9 +38,7 @@
         "signupAttributes": [
           "EMAIL"
         ],
-        "socialProviders": [
-          "GOOGLE"
-        ],
+        "socialProviders": [],
         "usernameAttributes": [],
         "verificationMechanisms": [
           "EMAIL"
